// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ForgotMyPasswordForm> @Render should render back button 1`] = `
<TextLink
  eventHandler={[Function]}
>
  <span
    id="TextLink"
    onClick={[Function]}
    style={
      Object {
        "color": "#007bff",
        "cursor": "pointer",
      }
    }
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            192,
            512,
            Array [],
            "f0d9",
            "M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z",
          ],
          "iconName": "caret-left",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-caret-left fa-w-6 "
        data-icon="caret-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 192 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </FontAwesomeIcon>
     back
  </span>
</TextLink>
`;

exports[`<ForgotMyPasswordForm> @Render should render the default state 1`] = `
<ForgotMyPasswordForm
  setPageState={[MockFunction]}
>
  <Box
    max={500}
  >
    <div
      style={
        Object {
          "backgroundColor": "#f8f9fa",
          "border": "solid 1px #ccc",
          "borderRadius": "8px",
          "margin": "0 auto",
          "maxWidth": 500,
          "padding": "20px 20px",
          "width": "100%",
        }
      }
    >
      <Row
        noGutters={false}
      >
        <div
          className="row"
        >
          <Col>
            <div
              className="col"
            >
              <Form
                className="w-100"
                id="ForgotMyPasswordForm"
                inline={false}
                onSubmit={[Function]}
              >
                <form
                  className="w-100"
                  id="ForgotMyPasswordForm"
                  onSubmit={[Function]}
                >
                  <FormGroup
                    controlId="ForgotMyPasswordEmail"
                  >
                    <div
                      className="form-group"
                    >
                      <FormControl
                        isInvalid={false}
                        name="email"
                        onChange={[Function]}
                        placeholder="@"
                        readOnly={false}
                        required={true}
                        type="email"
                        value=""
                      >
                        <input
                          className="form-control"
                          id="ForgotMyPasswordEmail"
                          name="email"
                          onChange={[Function]}
                          placeholder="@"
                          readOnly={false}
                          required={true}
                          type="email"
                          value=""
                        />
                      </FormControl>
                      <Feedback
                        type="invalid"
                      >
                        <div
                          className="invalid-feedback"
                        />
                      </Feedback>
                      <FormText
                        className="text-muted"
                      >
                        <small
                          className="text-muted form-text"
                        >
                          We'll never share your email with anyone else.
                        </small>
                      </FormText>
                    </div>
                  </FormGroup>
                  <Button
                    active={false}
                    className="float-right"
                    disabled={false}
                    id="ForgotMyPasswordSubmit"
                    type="submit"
                    variant="primary"
                  >
                    <button
                      className="float-right btn btn-primary"
                      disabled={false}
                      id="ForgotMyPasswordSubmit"
                      type="submit"
                    >
                      Reset Password
                    </button>
                  </Button>
                </form>
              </Form>
              <TextLink
                eventHandler={[Function]}
              >
                <span
                  id="TextLink"
                  onClick={[Function]}
                  style={
                    Object {
                      "color": "#007bff",
                      "cursor": "pointer",
                    }
                  }
                >
                  <FontAwesomeIcon
                    border={false}
                    className=""
                    fixedWidth={false}
                    flip={null}
                    icon={
                      Object {
                        "icon": Array [
                          192,
                          512,
                          Array [],
                          "f0d9",
                          "M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z",
                        ],
                        "iconName": "caret-left",
                        "prefix": "fas",
                      }
                    }
                    inverse={false}
                    listItem={false}
                    mask={null}
                    pull={null}
                    pulse={false}
                    rotation={null}
                    size={null}
                    spin={false}
                    swapOpacity={false}
                    symbol={false}
                    title=""
                    transform={null}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-caret-left fa-w-6 "
                      data-icon="caret-left"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 192 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M192 127.338v257.324c0 17.818-21.543 26.741-34.142 14.142L29.196 270.142c-7.81-7.81-7.81-20.474 0-28.284l128.662-128.662c12.599-12.6 34.142-3.676 34.142 14.142z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </FontAwesomeIcon>
                   back
                </span>
              </TextLink>
            </div>
          </Col>
        </div>
      </Row>
    </div>
  </Box>
</ForgotMyPasswordForm>
`;
